[tool.poetry]
name = "solid_state"
version = "0.1.0"
description = ""
authors = ["Ben Baker-Smith <bbakersmith@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
solidpython = "^1.1.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
